--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -87,7 +87,7 @@ jobs:
       - name: 🛠️ Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --require-hashes -r .github/workflows/requirements.txt
+          pip install -r .github/workflows/requirements.txt
           pre-commit install-hooks
 
       - name: 🔍 Run Pre-commit Checks
