chore: set bash debug

--- a/.github/workflows/reuse-check.yml
+++ b/.github/workflows/reuse-check.yml
@@ -10,7 +10,6 @@ on: # yamlint disable-line rule:truthy
       - main
       - develop
       - release/**
-      - resolve-**
     paths-ignore:
       - '**.md'
       - docs/**
@@ -102,7 +101,7 @@ jobs:
       - name: 🔍 Run REUSE Check
         id: check
         run: |
-          set +x
+          set -x
           # Run initial check
           reuse lint > reuse-report.txt
 
