fix: add permission issue write

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -174,6 +174,10 @@ jobs:
       always() &&
       needs.analyze.outputs.high-risks > 0
     runs-on: ubuntu-latest
+
+    permissions:
+      issues: write
+
     steps:
       - name: 🚨 Security Alert
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
