--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -167,6 +167,9 @@ jobs:
     if: always() && needs.dependabot.result != 'skipped'
     runs-on: ubuntu-latest
 
+    permissions:
+      issues: write
+
     steps:
       - name: 🔔 Notify on Failure
         if: needs.dependabot.result == 'failure'
