--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -50,6 +50,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write
 
     outputs:
       files-changed: ${{ steps.check.outputs.files-changed }}
