--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -123,6 +123,9 @@ jobs:
     if: always() && needs.dependency-review.result != 'skipped'
     runs-on: ubuntu-latest
 
+    permissions:
+      issues: write
+
     steps:
       - name: 🔔 Notify on Failure
         if: needs.dependency-review.result == 'failure'
