--- a/.github/workflows/pr-lint.yaml
+++ b/.github/workflows/pr-lint.yaml
@@ -178,6 +178,9 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
 
+    permissions:
+       issues: write
+
     steps:
       - name: 📊 Check Results
         if: |
