fix: set the correct types for pull_request

--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -6,7 +6,7 @@ name: Dependabot Auto-Merge
 
 on: # yamlint disable-line rule:truthy
   pull_request:
-    types: [opened, synchronize, reopened, labeled]
+    types: [opened, reopened, synchronize]
   pull_request_review:
     types: [submitted]
 
