--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -4,7 +4,7 @@
 
 name: Dependabot Auto-Merge
 
-on: # yamlint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   pull_request:
     types: [opened, reopened, synchronize]
   pull_request_review:
