fix: issue with toekn

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -47,6 +47,7 @@ jobs:
     permissions:
       actions: read
       issues: write
+      id-token: write
 
     outputs:
       score: ${{ steps.scorecard.outputs.overall-score }}
