--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -4,7 +4,7 @@
 
 name: Code Quality Checks
 
-on:
+on: # yamllint disable-line rule:truthy
   push:
     branches:
       - main
@@ -76,7 +76,7 @@ jobs:
           check-latest: true
 
       - name: 📦 Setup Cache
-        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 #v4.2.0
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 #  v4.2.0
         with:
           path: |
             ~/.cache/pre-commit
@@ -134,7 +134,7 @@ jobs:
 
       - name: 📤 Upload Results
         if: always()
-        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 #v4.3.4
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.3.4
         with:
           name: code-quality-results
           path: |
@@ -144,7 +144,7 @@ jobs:
 
       - name: 🔄 Create Fix PR
         if: steps.check.outputs.files-changed == 'true' && github.event_name == 'push'
-        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c #v5.0.2
+        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c # v5.0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: 'style: apply automatic code quality fixes'
