--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -31,29 +31,33 @@ on: # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: read # Base permissions for all jobs
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false
+  group: supply-chain-${{ github.ref }}
+  cancel-in-progress: true # Ensures only one run per branch is active
 
 jobs:
   analyze:
-    name: Supply Chain Analysis
+    name: Supply Chain Security Analysis
     if: github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 60
 
     permissions:
-      actions: read
-      issues: write
-      id-token: write
+      security-events: write # Required for SARIF uploads
+      id-token: write # Needed to publish results with Scorecard
+      issues: write # Allows opening issues if needed
+      pull-requests: write # For label management
 
     outputs:
       score: ${{ steps.scorecard.outputs.overall-score }}
       high-risks: ${{ steps.process.outputs.high-risks }}
 
     steps:
+      - name: 🔧 Setup Workspace
+        run: mkdir -p results && echo "Workspace initialized"
+
       - name: 🔒 Harden Runner
         uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
@@ -78,41 +82,31 @@ jobs:
         with:
           script: |
             const fs = require('fs');
-            const results = JSON.parse(fs.readFileSync('results/scorecard.sarif', 'utf8'));
+            const resultsFile = 'results/scorecard.sarif';
+            if (!fs.existsSync(resultsFile)) {
+              throw new Error('Results file not found');
+            }
+            const results = JSON.parse(fs.readFileSync(resultsFile, 'utf8'));
 
-            // Process results
-            const checks = results.runs[0].results;
+            // Extract checks
+            const checks = results.runs[0]?.results || [];
             const highRisks = checks.filter(check => check.level === 'error');
 
-            // Generate report
-            let report = '## 🔒 Supply Chain Security Report\n\n';
+            // Extract checks
+            const checks = results.runs[0]?.results || [];
+            const highRisks = checks.filter(check => check.level === 'error');
 
-            report += `### 📊 Overall Score: ${process.env.SCORE}/10\n\n`;
+            // Generate summary
+            const overallScore = process.env.SCORE || '0';
+            const report = `## 🔒 Supply Chain Security Report\n\n` +
+              `### 📊 Overall Score: ${overallScore}/10\n\n` +
+              `### 🚨 High Risk Issues\n` +
+              (highRisks.length > 0
+                ? highRisks.map(risk => `- ${risk.message.text}`).join('\n')
+                : '✅ No high-risk issues found\n');
 
-            report += '### 🚨 High Risk Issues\n';
-            if (highRisks.length > 0) {
-              highRisks.forEach(risk => {
-                report += `- ${risk.message.text}\n`;
-                if (risk.locations) {
-                  risk.locations.forEach(loc => {
-                    report += `  - ${loc.physicalLocation.artifactLocation.uri}\n`;
-                  });
-                }
-              });
-            } else {
-              report += '✅ No high risk issues found\n';
-            }
-
-            report += '\n### 🔍 Detailed Checks\n';
-            checks.forEach(check => {
-              report += `- **${check.ruleId}**: ${check.level}\n`;
-              report += `  - ${check.message.text}\n`;
-            });
-
-            // Write report
             fs.writeFileSync('results/security-report.md', report);
 
-            // Set outputs
             core.setOutput('high-risks', highRisks.length);
         env:
           SCORE: ${{ steps.scorecard.outputs.overall-score }}
@@ -133,73 +127,58 @@ jobs:
             .github/scorecard-policy.yml
           retention-days: 30
 
-      - name: 🏷️ Ensure Labels Exist
+      - name: 🏷️ Manage Labels
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const labels = ['security: good', 'security: needs-improvement', 'security: high-risk'];
-            for (const label of labels) {
-              try {
-                await github.rest.issues.createLabel({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  name: label,
-                  color: 'ededed', // Replace with your desired color
-                });
-              } catch (error) {
-                if (error.status !== 422) {
-                  throw error;
-                }
-              }
-            }
-
-      - name: 🏷️ Update PR Labels
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
             const score = parseInt(process.env.SECURITY_SCORE || '0', 10);
-            const labels = [];
 
-            if (score >= 8) {
-              labels.push('security: good');
-            } else if (score >= 6) {
-              labels.push('security: needs-improvement');
-            } else {
-              labels.push('security: high-risk');
-            }
+            // Add appropriate label
+            const issueLabels = score >= 8
+              ? ['security: good']
+              : score >= 6
+              ? ['security: needs-improvement']
+              : ['security: high-risk'];
 
-            const issue_number = context.payload.pull_request.number;
-            if (!issue_number) {
-              throw new Error('No pull request number found in context.');
-            }
-
-            await github.rest.issues.addLabels({
+            const existingLabels = await github.rest.issues.listLabelForRepo({
               owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: issue_number,
-              labels: labels,
+              repo: context.repo.repo
             });
 
-            console.log(`Labels added: ${labels.join(', ')}`);
-                env:
-                  SECURITY_SCORE: ${{ steps.scorecard.outputs.overall-score }} # Passed dynamically
+            for (const label of labels) {
+              if (!existingLabels.data.some(existing => existing.name == label)) {
+                  await github.rest.issues.createLabel({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    name: label,
+                    color: 'ededed', // Replace with your desired color
+                  });
+              }
+
+            if (github.event_name == 'pull_request') {
+              const prNumber = context.payload.pull_request.number;
+              await: github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: prNumber,
+                labels: issueLabels,
+              });
+            }
+        env:
+          SCORE: ${{ steps.scorecard.outputs.overall-score }}
 
   notify:
     needs: analyze
-    if: |
-      always() &&
-      needs.analyze.outputs.high-risks > 0
+    if: needs.analyze.outputs.high_risks > 0
     runs-on: ubuntu-latest
 
     permissions:
-      issues: write
-      id-token: write
+      issues: write # To create notification issues
 
     steps:
       - name: 🚨 Security Alert
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             const message = `## 🚨 Supply Chain Security Alert
@@ -219,4 +198,4 @@ jobs:
             });
         env:
           SCORE: ${{ needs.analyze.outputs.score }}
-          HIGH_RISKS: ${{ needs.analyze.outputs.high-risks }}
+          HIGH_RISKS: ${{ needs.analyze.outputs.high_risks }}
