chore: add license header and the head-line

--- a/.github/scorecard-policy.yml
+++ b/.github/scorecard-policy.yml
@@ -1,3 +1,7 @@
+---
+# SPDX-License-Identifier: EUPL-1.2
+# SPDX-FileCopyrightText: 2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
+#
 version: 1.0
 checks:
   - id: "CICD"
