--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -192,3 +192,9 @@ jobs:
               issue_number: context.payload.pull_request.number,
               body: content
             });
+
+      - name: 🧹 Cleanup
+        if: always()
+        run: |
+          rm pre-commit-output.txt
+          rm quality_report.md
